fix: h1 align

--- a/src/pages/Welcome/style.module.css
+++ b/src/pages/Welcome/style.module.css
@@ -12,14 +12,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 20px;
 }
 
 .title {
-  font-size: clamp(14px, 8vw, 58px);
+  font-size: clamp(12px, 8vw, 58px);
   text-align: center;
   text-transform: uppercase;
   color: #fff;
-  letter-spacing: 16px;
+  letter-spacing: 1rem;
+  margin-left: 1rem;
   margin-bottom: 62px;
 }
